--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1209,12 +1209,23 @@ IF (RT_FOUND AND ASSIMP_IMPORTER_GLTF_USE_OPEN3DGC)
   TARGET_LINK_LIBRARIES(assimp ${RT_LIBRARY})
 ENDIF (RT_FOUND AND ASSIMP_IMPORTER_GLTF_USE_OPEN3DGC)
 
+IF(HUNTER_ENABLED)
+  INSTALL( TARGETS assimp
+    EXPORT "${TARGETS_EXPORT_NAME}"
+    LIBRARY DESTINATION ${ASSIMP_LIB_INSTALL_DIR}
+    ARCHIVE DESTINATION ${ASSIMP_LIB_INSTALL_DIR}
+    RUNTIME DESTINATION ${ASSIMP_BIN_INSTALL_DIR}
+    FRAMEWORK DESTINATION ${ASSIMP_LIB_INSTALL_DIR}
+    COMPONENT ${LIBASSIMP_COMPONENT}
+    INCLUDES DESTINATION "include")
+ELSE(HUNTER_ENABLED)
 INSTALL( TARGETS assimp
-  LIBRARY DESTINATION ${ASSIMP_LIB_INSTALL_DIR}
-  ARCHIVE DESTINATION ${ASSIMP_LIB_INSTALL_DIR}
-  RUNTIME DESTINATION ${ASSIMP_BIN_INSTALL_DIR}
-  FRAMEWORK DESTINATION ${ASSIMP_LIB_INSTALL_DIR}
-  COMPONENT ${LIBASSIMP_COMPONENT})
+    LIBRARY DESTINATION ${ASSIMP_LIB_INSTALL_DIR}
+    ARCHIVE DESTINATION ${ASSIMP_LIB_INSTALL_DIR}
+    RUNTIME DESTINATION ${ASSIMP_BIN_INSTALL_DIR}
+    FRAMEWORK DESTINATION ${ASSIMP_LIB_INSTALL_DIR}
+    COMPONENT ${LIBASSIMP_COMPONENT})
+ENDIF(HUNTER_ENABLED)
 INSTALL( FILES ${PUBLIC_HEADERS} DESTINATION ${ASSIMP_INCLUDE_INSTALL_DIR}/assimp COMPONENT assimp-dev)
 INSTALL( FILES ${COMPILER_HEADERS} DESTINATION ${ASSIMP_INCLUDE_INSTALL_DIR}/assimp/Compiler COMPONENT assimp-dev)
 
