update install interface location

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1095,7 +1095,7 @@ ADD_LIBRARY(assimp::assimp ALIAS assimp)
 TARGET_INCLUDE_DIRECTORIES ( assimp PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/../include>
-  $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/include>
+  $<INSTALL_INTERFACE:include>
 )
 
 IF(HUNTER_ENABLED)
